--- a/fe/package.json
+++ b/fe/package.json
@@ -17,14 +17,17 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-query": "^5.71.1",
     "chess.js": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-chessboard": "^4.7.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
   },
