--- a/be/package.json
+++ b/be/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/express": "^1.3.59",
     "chess.js": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
