--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.71.1",
+    "axios": "^1.8.4",
     "chess.js": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
